@@ -5,3 +5,8 @@ Message
    :members:
    :undoc-members:
    :show-inheritance:
+
+.. autoclass:: jelastic.api.message._Email
+   :members:
+   :undoc-members:
+   :show-inheritance:
