@@ -18,13 +18,10 @@ def client():
 def test_get_migration_operations(client):
     client._get.return_value = success_response
     response = client.Migration.GetMigrationOperations(
-        'docker',
+        "docker",
     )
     client._get.assert_called_with(
-        'GetMigrationOperations',
-        params={
-            'search': 'docker'
-        }
+        "GetMigrationOperations", params={"search": "docker"}
     )
     assert response == success_response
 
@@ -32,7 +29,5 @@ def test_get_migration_operations(client):
 def test_migrate(client):
     client._get.return_value = success_response
     response = client.Migration.Migrate()
-    client._get.assert_called_with(
-        'Migrate'
-    )
+    client._get.assert_called_with("Migrate")
     assert response == success_response
