@@ -17,30 +17,17 @@ def client():
 
 def test_get(client):
     client._get.return_value = success_response
-    response = client.Engine.Get(
-        'docker',
-        77
-    )
+    response = client.Engine.Get("docker", 77)
     client._get.assert_called_with(
-        'Get',
-        params={
-            "engineType": 'docker',
-            "ownerUid": 77
-        }
+        "Get", params={"engineType": "docker", "ownerUid": 77}
     )
     assert response == success_response
 
 
 def test_get_entry_point(client):
     client._get.return_value = success_response
-    response = client.Engine.GetEntryPoint(
-        "COLUMBUS", 1
-    )
+    response = client.Engine.GetEntryPoint("COLUMBUS", 1)
     client._get.assert_called_with(
-        'GetEntryPoint',
-        params={
-            "hostGroup": "COLUMBUS",
-            "ownerUid": 1
-        }
+        "GetEntryPoint", params={"hostGroup": "COLUMBUS", "ownerUid": 1}
     )
     assert response == success_response
